--- a/DoD-rep/DoD-rep.csproj
+++ b/DoD-rep/DoD-rep.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bag.cs" />
+    <Compile Include="Creature.cs" />
     <Compile Include="Food.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameObject.cs" />
