--- a/DoD-rep/DoD-rep.csproj
+++ b/DoD-rep/DoD-rep.csproj
@@ -50,6 +50,8 @@
     <Compile Include="GameObject.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Monster.cs" />
+    <Compile Include="Ogre.cs" />
+    <Compile Include="Orc.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
